# network_stack

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  HOWTO.md  README.md
cmake/: makro_separate_tests.cmake
docs/: client_class.puml  server_class.puml  socket_class.puml
include/: AGENTS.md
include/client/: AGENTS.md  Client.h  ClientAsync.h  ClientBase.h  ClientSync.h
include/core/: AGENTS.md  Context.h  ErrorCodes.h  ErrorTranslation.h  TlsContextWrapper.h
include/core/details/: ContextDetail.h  TlsContextDetail.h
include/error/: ErrorCodes.h
include/protocol/: AGENTS.md  FileTransfer.h  FtpFileTransfer.h  FtpUtils.h  Ticket.h  TicketContext.h  TicketController.h  TicketFrame.h  TicketJson.h  TicketPeer.h  TicketSerializer.h  TicketWorker.h
include/server/: AGENTS.md  Server.h  ServerAsync.h  ServerBase.h  ServerSync.h
include/server/details/: ServerBaseDetail.h
include/socket/: AGENTS.md  AsioTcpSocket.h  AsyncInterface.h  AsyncSocketInterface.h  BaseInterface.h  SocketBase.h  SocketBaseDetails.h  SocketBaseImpl.h  SocketBaseInterface.h  SslSocket.h  SyncInterface.h  SyncSocketInterface.h  TcpImpl.h  TcpOptions.h  TcpSocket.h  TlsOptions.h  TlsSocket.h
include/socket/details/: SocketBaseDetail.h  TcpSocketDetail.h  TcpSocketFactory.h  TlsSocketDetail.h  TlsSocketFactory.h
src/client/: Client.cpp  ClientAsync.cpp  ClientBase.cpp  ClientSync.cpp
src/core/: Context.cpp  ErrorCodes.cpp  ErrorTranslation.cpp  TlsContextWrapper.cpp
src/protocol/: FtpFileTransfer.cpp  FtpUtils.cpp  Ticket.cpp  TicketController.cpp  TicketFrame.cpp  TicketJson.cpp  TicketPeer.cpp  TicketWorker.cpp
src/server/: Server.cpp  ServerAsync.cpp  ServerBase.cpp  ServerSync.cpp
src/socket/: AsioTcpSocket.cpp  SocketBase.cpp  SslSocket.cpp  TcpSocket.cpp  TcpSocketFactory.cpp  TlsSocket.cpp  TlsSocketFactory.cpp
tests/: test_async_client_server.cpp  test_async_client_server_edge_cases.cpp  test_async_timeouts.cpp  test_async_tls.cpp  test_bandwidth_ci_async.cpp  test_client_server_misuse.cpp  test_context_wrapper.cpp  test_echo_server_process.cpp  test_error_code.cpp  test_error_translation.cpp  test_fixture_io_context.h  test_ftp_integration.cpp  test_ftp_misuse.cpp  test_handshake_timeout.cpp  test_socket_edge_cases.cpp  test_socket_interface.cpp  test_sync_client_server.cpp  test_sync_client_server_edge_cases.cpp  test_sync_timeouts.cpp  test_sync_tls.cpp  test_ticket_controller_worker.cpp  test_ticket_edge_cases.cpp  test_ticket_protocol_integration.cpp  test_ticket_protocol_misuse.cpp  test_ticket_serialization.cpp  test_tls_bandwidth_ci_async.cpp  test_tls_bandwidth_ci_sync.cpp  test_tls_bandwidth_huge_async.cpp  test_tls_bandwidth_huge_sync.cpp  test_tls_misuse.cpp
tests/fixtures/: EchoServerProcess.h  FtpServerFixture.h  echo_server.cpp  test_certificate_paths.h  test_fixture_async_client_server.h  test_fixture_io_context.h  test_fixture_sync_client_server.h
tools/: README_CERTS.md  generate_certs.py
